# rust-smart-order-router

./: .gitignore  Cargo.toml  README.md
docs/: architecture.mmd
examples/: basic_routing.rs
src/: lib.rs  main.rs  types.rs
src/analytics/: metrics.rs  mod.rs
src/backtesting/: mod.rs  simulator.rs
src/exchanges/: binance.rs  coinbase.rs  kraken.rs  mod.rs
src/router/: mod.rs  optimizer.rs  splitter.rs
