[package]
name = "smart-order-router"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
description = "High-performance smart order router for optimal trade execution across multiple exchanges"
license = "MIT"
repository = "https://github.com/galafis/rust-smart-order-router"
keywords = ["trading", "finance", "order-routing", "execution", "algorithmic-trading"]
categories = ["finance", "algorithms"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
plotters = "0.3"
csv = "1.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"

[[bin]]
name = "sor"
path = "src/main.rs"
